[package]
name = "cli-covid19"
version = "0.1.0"
authors = ["Adiatma Kamarudin <adiatma9024@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
serde = "1.0.114"
serde_json = "1.0.57"
colored = "2"
chrono = "0.4.13"
