[package]
name = "cli-covid19"
version = "0.1.4"
authors = ["Adiatma Kamarudin <adiatma9024@gmail.com>"]
edition = "2018"
description = "CLI to get daily report covid19 by countries"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
serde = "1.0.114"
serde_json = "1.0.57"
colored = "2"
chrono = "0.4.13"
openssl = "0.10.30"

[features]
vendored-openssl = ['openssl/vendored']
